--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "poker-odds-calc": "0.0.11",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.9.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
